# MyFreeApps

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  TECH_DEBT.md  package-lock.json  package.json
apps/mybookkeeper/backend/: .env.docker.example  .env.example  pyproject.toml  pytest.ini  requirements.txt
apps/mybookkeeper/backend/alembic/: env.py
apps/mybookkeeper/backend/alembic/versions/: 08cfc089005c_add_document_type_to_documents.py  (+143 more)
apps/mybookkeeper/backend/app/: main.py
apps/mybookkeeper/backend/tests/: conftest.py  test_account_deletion.py  test_account_lockout.py  test_admin_routes.py  test_airbnb_payout_detection.py  test_airbnb_payout_matcher.py  test_alembic_chain.py  test_applicant_audit_masking.py  test_applicant_contract_dates_api.py  test_applicant_contract_service.py  test_applicant_encryption.py  test_applicant_event_repo.py  test_applicant_indexes.py  test_applicant_repo.py  test_applicant_repo_count.py  test_applicant_service.py  test_applicant_stage_service.py  test_applicant_stage_transition_api.py  test_applicants_api.py  test_applicants_api_promote.py  test_attachment_response_builder.py  test_attribution_matcher.py  test_attribution_repo.py  test_attribution_routes.py  test_attribution_service_airbnb_payout.py  test_attribution_service_attribute_manually.py  test_attribution_service_auto_verifies.py  test_attribution_service_confirm_property.py  test_attribution_service_income_guard.py  test_attribution_service_payer_alias.py  test_audit_log_gaps.py  test_audit_registration.py  test_auth_event_service.py  test_auth_events_admin.py  test_auth_events_integration.py  test_bank_csv_parser.py  test_blackout_notes_attachments.py  test_blocklist_repo.py  test_booking_ingestion_service.py  test_booking_parser.py  (+217 more)
apps/mygamingassistant/backend/: .env.docker.example  pyproject.toml  requirements.txt  seed_youtube_lineups.py
apps/mygamingassistant/backend/app/: main.py
apps/mygamingassistant/backend/data/: lineup_library.json
apps/mygamingassistant/backend/scripts/: .env.r2.example  .gitignore  PROPOSE_PINS_INSTRUCTIONS.md  accept_anubis_lineups.py  accept_cache_lineups.py  accept_map_lineups.py  accept_mirage_utility_lineups.py  accept_sova_lineups.py  accept_viper_icebox_lineups.py  ancient_accept.json  ancient_items.json  bind_accept.json  bind_items.json  breeze_accept.json  check_11_offset.py  create_anubis_lineups.py  create_cache_combo_extras.py  create_cache_lineups.py  create_cs2_ancient_lineups.py  create_cs2_dust2_lineups.py  create_cs2_inferno_lineups.py  create_cs2_nuke_lineups.py  create_cs2_overpass_lineups.py  create_cs2_vertigo_lineups.py  create_mirage_utility_lineups.py  create_sova_bind_lineups.py  create_sova_fracture_lineups.py  create_sova_haven_lineups.py  create_sova_icebox_lineups.py  create_sova_lineups.py  create_sova_lotus_lineups.py  create_sova_pearl_lineups.py  create_sova_split_lineups.py  create_viper_icebox_lineups.py  cs2-lineup-expert.md  dedup_lineups.py  diag_problem_children.py  download_video.py  dump_chapters.py  dust2_accept.json  (+60 more)
apps/mygamingassistant/backend/tests/: conftest.py  test_agent_fixtures.py  test_aim_localizer.py  test_aim_timing_classifier.py  test_alembic_chain.py  test_auth_gating.py  test_chapter_parser.py  test_classifier_service.py  test_clip_backfill.py  test_clip_generator.py  test_effective_anchor_resolution.py  test_fixture_conformance.py  test_frame_extractor.py  test_health.py  test_ingestion_orchestrator.py  test_ingestion_with_classifier.py  test_landing_clip_backfill.py  test_landing_clip_generator.py  test_lineup_admin_source_start.py  test_lineup_clip_url_repo.py  test_lineup_exporter_fields.py  test_lineup_landing_clip_repo.py  test_lineup_landing_screenshot_repo.py  test_lineup_micro_clip_repo.py  test_lineup_pack_roundtrip.py  test_lineup_package_service.py  test_lineup_screenshot_url_repo.py  test_lineup_technique_repo.py  test_lineups.py  test_media_public_base_url_guard.py  test_micro_clip_backfill.py  test_micro_clip_generator.py  test_minimap_upload.py  test_pane_shift_window_service.py  test_pane_trim_service.py  test_pane_upload_service.py  test_pane_widen_source_service.py  test_polygon_centroid.py  test_poster_backfill.py  test_poster_extractor.py  (+18 more)
apps/mygamingassistant/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/myjobhunter/backend/: .env.docker.example  .env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/myjobhunter/backend/alembic/: env.py
apps/myjobhunter/backend/app/: main.py
apps/myjobhunter/backend/tests/: conftest.py  test_account_deletion.py  test_account_lockout.py  test_application_company_filter.py  test_application_contacts.py  test_application_events.py  test_application_get_by_id.py  test_application_jd_fallback.py  test_application_list_filters.py  test_application_status_column.py  test_application_transition_service.py  test_application_writes.py  test_applications_kanban_view.py  test_audit.py  test_audit_log_gaps.py  test_auth.py  test_company_name_search.py  test_company_research_service.py  test_company_writes.py  test_config_key_validation.py  test_data_export.py  test_demo_service.py  test_discover_endpoints.py  test_discover_patch_source.py  test_discover_patch_source_config.py  test_discover_source_filter.py  test_discovery_active_only.py  test_discovery_embedding_service.py  test_discovery_fetch_reaper.py  test_discovery_industry_chips.py  test_discovery_jsearch_pages_setting.py  test_discovery_models.py  test_discovery_post_fetch_filters.py  test_discovery_prefilter_service.py  test_discovery_promote_service.py  test_discovery_scheduler_service.py  test_discovery_score_service.py  test_discovery_source_name.py  test_discovery_source_service.py  test_document_service.py  (+43 more)
apps/myrecipes/backend/: .env.docker.example  pyproject.toml  requirements.txt
apps/myrecipes/backend/app/: main.py
apps/myrecipes/backend/tests/: conftest.py  test_recipe_extraction.py  test_recipes.py  test_recipes_public.py  test_totp_setup.py
(+3360 files in other folders)
