[project]
name = "mybookkeeper-backend"
version = "0.1.0"
description = "MyBookkeeper FastAPI backend — AI-powered invoice extraction and bookkeeping for rental properties."
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.118,<0.140",
    "starlette>=1.0,<2.0",
    "uvicorn[standard]==0.46.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "email-validator==2.3.0",
    "fastapi-users[sqlalchemy]==15.0.5",
    "fastapi-users-db-sqlalchemy==7.0.0",
    "anthropic==0.100.0",
    "google-api-python-client==2.196.0",
    "google-auth-httplib2==0.4.0",
    "google-auth-oauthlib==1.4.0",
    "cryptography>=48",
    "python-multipart==0.0.28",
    "passlib[bcrypt]==1.7.4",
    "aiofiles>=25",
    "pypdf>=6.12.0",
    "mammoth==1.12.0",
    "openpyxl==3.1.5",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "minio==7.2.20",
    "reportlab==4.5.0",
    "sentry-sdk[fastapi]==2.59.0",
    "pyotp==2.9.0",
    "qrcode[pil]==8.2",
    "pyjwt[crypto]>=2.10",
    # PR 3.3 — screening report safety pipeline (RENTALS_PLAN.md §8.5).
    # python-magic does the libmagic-backed content-type sniff; clamd is
    # the unix-socket client for ClamAV. Both gracefully degrade when the
    # underlying system library / daemon isn't present (dev / CI / Windows).
    # Pillow already comes in via qrcode[pil].
    "python-magic==0.4.27",
    "clamd==1.0.2",
    # PR 1.4 — channel calendar sync. The icalendar library handles RFC
    # 5545 line folding, escaping, DATE vs DATETIME VALUE parameters, and
    # timezone propagation — all of which are fiddly enough that hand-rolling
    # is a bug factory. Used by both outbound serializer and inbound parser.
    "icalendar==7.1.0",
    # Lease Templates Phase 1 — DOCX rendering with placeholder substitution.
    # PDF rendering uses the existing ``reportlab`` dep (low-fidelity for v1;
    # weasyprint deferred per Phase 1 stop conditions due to Windows install
    # complexity). The DOCX renderer falls back gracefully if the lib is absent
    # (e.g. CI without the optional dep) — see services/leases/renderer.py.
    "python-docx==1.2.0",
    "platform-shared",
    "markdown-it-py>=4.2.0",
    "mdit-py-plugins>=0.6.1",
    "linkify-it-py>=2.1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
platform-shared = { path = "../../../packages/shared-backend", editable = true }

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
]
