[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myjobhunter-backend"
version = "0.1.0"
description = "MyJobHunter backend — job hunt tracker with AI-powered document processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "email-validator==2.3.0",
    "fastapi-users[sqlalchemy]==15.0.5",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==47.0.0",
    "httpx==0.28.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "anyio==4.13.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
