[project]
name = "myjobhunter-backend"
version = "0.1.0"
description = "MyJobHunter backend — job hunt tracker with AI-powered document processing"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "email-validator==2.3.0",
    "fastapi-users[sqlalchemy]==15.0.5",
    "pyjwt[crypto]==2.12.1",
    "passlib[bcrypt]==1.7.4",
    "cryptography==47.0.0",
    "httpx==0.28.1",
    "anyio==4.13.0",
    "minio==7.2.20",
    "platform-shared",
    "anthropic>=0.49.0",
    "pypdf>=4.0.0",
    "mammoth>=1.7.0",
    # JD URL extractor (POST /applications/extract-from-url): parses HTML from
    # arbitrary career-page URLs to either (a) extract schema.org JobPosting
    # JSON-LD blocks server-rendered by modern ATSes, or (b) strip visible
    # text for the Claude HTML-fallback path. lxml (declared via beautifulsoup4)
    # is the parser we feed BeautifulSoup — faster + stricter than html.parser.
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    # Resume-refinement export pipeline: weasyprint converts HTML
    # (produced by pandoc) to PDF; pandoc handles DOCX natively.
    "weasyprint>=62.0",
    # Sentry — fail-loud production enforcement. See app/core/observability.py.
    # Mirrors apps/mybookkeeper/backend/pyproject.toml.
    "sentry-sdk[fastapi]==2.58.0",
    # Discovery source adapters: tenacity wraps every outbound HTTP
    # call with exponential-backoff retry on 429 / 5xx so a transient
    # provider blip doesn't tank a fetch cycle.
    "tenacity>=9.0",
    # Discovery embeddings (PR 4a). fastembed runs sentence-transformers
    # models locally via ONNX — no external API, no per-call cost. The
    # default model is all-MiniLM-L6-v2 (384 dims, ~90MB ONNX). The
    # pgvector Python client integrates the Postgres ``vector`` column
    # type with SQLAlchemy 2.0 so the ORM can read/write list[float].
    # Both are wired in app.services.discovery.discovery_embedding_service.
    "fastembed>=0.8",
    "pgvector>=0.4",
    # Scheduled discovery passes (PR 5). In-process AsyncIOScheduler with a
    # Postgres SQLAlchemyJobStore so jobs survive restarts and are visible to
    # the operator via the same DB. apscheduler[sqlalchemy] pulls in the
    # SQLAlchemyJobStore variant. When MJH outgrows the single-process model
    # (cross-process retries, >50 daily passes/min globally, asyncio lag >200ms
    # p95) — promote to Dramatiq per the migration triggers documented in
    # app/services/discovery/discovery_scheduler_service.py.
    "apscheduler[sqlalchemy]>=3.11.2",
]

[tool.uv]
package = false

[tool.uv.sources]
platform-shared = { path = "../../../packages/shared-backend", editable = true }

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-timeout==2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
