[package]
name = "mygamingassistant"
version = "0.0.1"
description = "MyGamingAssistant desktop shell — Tauri wrapper around the web SPA"
authors = ["jykwon91"]
edition = "2021"
rust-version = "1.77"

# Single-binary crate. PR 7 = shell only. Future PRs slot into the placeholder
# modules under src/ (gsi/, capture/, cv/) without re-architecting.

[lib]
name = "mygamingassistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tauri-runtime-wry` brings in tokio under the hood. We enable the tokio
# features axum needs without taking on the full multi-thread runtime
# separately — axum runs on Tauri's existing runtime via `tokio::spawn`.
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# axum + tower for the GSI HTTP receiver. We need only the bare minimum;
# json extraction, routing, and a TCP listener. No tower-http (security
# headers are unnecessary — this server is loopback-only and validated by
# shared-secret token).
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"] }
tokio = { version = "1", default-features = false, features = ["net", "rt", "sync", "time", "macros"] }
# Time formatting for `last_event_at`. `time` is smaller than `chrono` and
# already a transitive dep of axum's dependency tree.
time = { version = "0.3", features = ["formatting"] }
# UUID for the per-install auth token. v4 = random.
uuid = { version = "1", features = ["v4", "serde"] }
# `dirs` resolves OS-specific user dirs (Steam install path detection on
# Linux/macOS). Tiny dep, well-maintained, used by ~everything in the Rust
# ecosystem that needs %APPDATA% / ~/.config / etc.
dirs = "5"
# Structured logs for malformed payloads / install errors — captured by
# Tauri's own logger via the `log` facade.
log = "0.4"

# --- PR 9a: minimap CV pipeline ---
# Pure-Rust image stack. We DELIBERATELY avoid `opencv-rust`:
#   - opencv-rust needs a ~200 MB system OpenCV install on every dev/CI host
#   - reproducible CI builds become a pinned vcpkg dance
#   - color-thresholded blob detection (what we do) is a few hundred LOC at
#     most; we don't need contour matching or optical flow
# image + imageproc cover decode/encode + connected-component labelling +
# basic morphology. Both are pure Rust, well-maintained, no native deps.
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25", default-features = false }

# Windows-only screen capture via the Windows.Graphics.Capture API. Same
# GPU-shared frame path as DXGI Desktop Duplication — frames stay on the
# GPU until we explicitly copy them to a CPU buffer, so the game's render
# pipeline pays effectively zero overhead. `windows-capture` is a pure-Rust
# binding (no C++/vcpkg) maintained by NiiightmareXD; verified active.
# Falls back gracefully on non-Windows targets via cfg gating below.
[target.'cfg(windows)'.dependencies]
windows-capture = "1"

[features]
# Default features.
default = ["custom-protocol"]
# Required for `cargo tauri build` to produce a production binary.
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
# `reqwest` drives the integration test that POSTs to the live receiver.
# `default-features = false` drops the system-TLS dependency — we only POST
# to `http://127.0.0.1` so we don't need TLS at all. `json` adds serde_json
# integration so we can `.json(&body)` from the tests.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# tempfile for filesystem tests against the cfg installer.
tempfile = "3"
# tokio macros + multi-thread runtime for `#[tokio::test(flavor = "multi_thread")]`.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
# `tower::ServiceExt::oneshot` is the canonical axum-router test driver —
# lets us exercise the full request → response pipeline without binding a
# TCP socket. axum re-exports `tower` transitively, but the `ServiceExt`
# trait isn't in its public surface so we depend on tower directly.
tower = { version = "0.5", features = ["util"] }
